Реализованно отображение списка задач. Генерация id. Добавление новой таски

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,32 +1,31 @@
 <html>
 
-    <head>
-        <title>User tasks</title>
-    </head>
+<head>
+    <title>User tasks</title>
+</head>
 
-    <body>
+<body>
+    <h1>Options</h1>
+    <form action="/addtask/">
+        <button type="submit">Add new task</button>
+    </form>
 
-        {{range .Tasks}}
-        <div>
-            <h3> ID:{{ .Id }} </h3>
-        </div>
-        <div> Title:{{ .Title }}</div>
-        <div> Status:{{ .Status }} </div>
-        <div> Description:{{ .Description }} </div>
-        <div> Date:{{ .Date }}</div>
-        {{end}}
+    {{range .TasksA}}
+    <div>
+        <h3> ID:{{ .Id }} </h3>
+    </div>
+    <div> Title:{{ .Title }}</div>
+    <div> Status:{{ .Status }} </div>
+    <div> Description:{{ .Description }} </div>
+    <div> Date:{{ .Date }}</div>
+    <form action="/deletetask/">
+        <button type="submit">Delete task</button>
+    </form>
+    <form action="/edittask/">
+        <button type="submit">Edit task</button>
+    </form>
+    {{end}}
 
-        <h1>Options</h1>
-        <form action="/addnewtask/">
-            <button type="submit">Add new task</button>
-        </form>
-        <form action="/deletetask/">
-            <button type="submit">Delete task</button>
-        </form>
-        <form action="/edittask/">
-            <button type="submit">Edit task</button>
-        </form>
-
-    </body>
+</body>
 
 </html>
