--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -9,8 +9,12 @@
     <form method="POST" action="useraded">
         <label>Edit title</label><br>
         <input type="text" name="title" value={{ .Title }} /><br><br>
-        <label>Edit description</label><br>
-        <textarea type="text" name="description" rows="20" value={{ .Description }} ></textarea><br><br>
+        <label>Edit description </label><br>
+        <textarea type="text" name="description" rows="20" >{{ .Description }}</textarea><br><br>
+        <label>Status task</label><br>
+        <label><input type="radio" name="new" value={{ .Status }}> New</label><br>
+        <label><input type="radio" name="in-work" value={{ .Status }}> In work</label><br>
+        <label><input type="radio" name="completed" value={{ .Status }}> Completed</label><br><br>
         <input type="submit" value="Submit" />
     </form>
 </body>
