--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <h1>Options</h1>
+    <h1>Username</h1>
     <form action="/addtask/">
         <button type="submit">Add new task</button>
     </form>
