--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <form action="/deltask?id=" enctype="application/x-www-form-urlencoded">
         <button type="submit" name="id" value={{ .Id }}>Delete task</button>
     </form>
-    <form action="/edittask?id=" enctype="application/x-www-form-urlencoded">
+    <form action="/edittask/" enctype="application/x-www-form-urlencoded">
         <button type="submit" name="id" value={{ .Id }} >Edit task</button>
     </form>
     <hr>
