--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -6,7 +6,7 @@
 
 <body>
     <h2>New task's data</h2>
-    <form method="POST" action="useraded">
+    <form method="POST">
         <label>Enter title</label><br>
         <input type="text" name="title" /><br><br>
         <label>Enter description</label><br>
