--- a/templates/edittask.html
+++ b/templates/edittask.html
@@ -7,7 +7,7 @@
 
 <body>
     <h2>Edit task's data</h2>
-    <form method="POST" action="useraded">
+    <form method="POST" >
         <label>Edit title</label><br>
         <input type="text" name="title" value={{ .Title }} /><br><br>
         <label>Edit description </label><br>
